external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_wrong_native_struct_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/invalid_wrong_native_struct_match.move:13:13
   │
11 │     fun f(s: S): u64 {
   │              - Expected: '0x0::M::S'
12 │         match (s) {
13 │             N {} => 1,
   │             ^^^^
   │             │
   │             Invalid pattern
   │             Given: '0x0::M::N'

error[E04015]: invalid use of native item
   ┌─ tests/move_2024/matching/invalid_wrong_native_struct_match.move:13:13
   │
 5 │     public native struct N;
   │            ------ Struct declared 'native' here
   ·
13 │             N {} => 1,
   │             ^^^^ Invalid pattern usage for native struct '0x0::M::N'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed
